--- a/i3lock.1
+++ b/i3lock.1
@@ -30,7 +30,7 @@ i3lock-color \- improved screen locker
 .RB [\|\-f\|]
 
 .SH DESCRIPTION
-.B i3lock-color
+.B i3lock
 is a simple screen locker like slock. After starting it, you will see a white
 screen (you can configure the color/an image). You can return to your screen by
 entering your password.
