finish fixing manpage stuff

--- a/i3lock.1
+++ b/i3lock.1
@@ -8,13 +8,13 @@
 .fi
 ..
 
-.TH i3lock-color 1 "JANUARY 2012" Linux "User Manuals"
+.TH i3lock 1 "JANUARY 2012" Linux "User Manuals"
 
 .SH NAME
-i3lock-color \- improved screen locker
+i3lock \- improved screen locker
 
 .SH SYNOPSIS
-.B i3lock-color
+.B i3lock
 .RB [\|\-v\|]
 .RB [\|\-n\|]
 .RB [\|\-b\|]
